# ghostpost

./: db.sqlite3  pyproject.toml
ghostpost/: settings.py  urls.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py
templates/: addpost.html  boasts.html  index.html  post_detail.html  roasts.html  sorted.html
