[tool.poetry]
name = "ghostpost"
version = "0.1.0"
description = "Boast or Roast a Post."
authors = ["Mike Boring <shekinah999@msn.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
